--- a/manuscript/supplemental_material.Rnw
+++ b/manuscript/supplemental_material.Rnw
@@ -1452,6 +1452,56 @@ print(xtable(combined.placenta.go.results,
 
 \clearpage
 
+
+
+\begin{figure}[tbh]
+<<core.placenta.transcriptome.housekeeping,fig.width=5,fig.height=10,out.height="0.8\\textheight",echo=FALSE>>=
+cptlh <-
+    core.placenta.transcriptome.long[!grepl("(min|median|max|all)_expression|all_but_",
+                                            Species) & housekeeping==TRUE,]
+cptlh <- cptlh[,Species:=factor(gsub("^([^ ])[^ ]* +([^ ]*)","\\1. \\2",capfirst(Species)),
+                              levels=gsub("^([^ ])[^ ]* +([^ ]*)","\\1. \\2",
+                                          capfirst(names(species.names))))]
+
+print(ggplot(cptlh,aes(x=human_name,y=FPKM))+
+      geom_boxplot(outlier.shape=NA)+
+      scale_y_log10(labels=trans_format("log10", math_format(10^.x)))+
+      geom_point(aes(color=Species,shape=Species))+
+      scale_shape_manual("Species",
+                         guide=guide_legend(#nrow=1,
+                                            keywidth=unit(3,"mm"),
+                                            keyheight=unit(3,"mm"),
+                                            label.theme=element_text(face="italic",
+                                                                     angle=0,
+                                                                     size=9),
+                                            title.position="top"
+                                            ),
+                         values=0:18)+
+      # scale_color_discrete(NULL)+
+      coord_flip()+
+      xlab("Human Ortholog Name")+
+      ylab("Gene Expression (FPKM)")+
+      theme_bw() +
+      theme(legend.position=c(0.7,0.15),
+            axis.text.y=element_text(face="italic",size=5),
+            legend.margin=unit(0,"mm"),
+            legend.justification="left",
+            plot.margin=unit(c(0,0,0,0),"mm")
+            ))
+@ 
+\caption{Housekeeping genes excluded from the Core Placenta Transcriptome.
+  \Sexpr{cptlh[,length(unique(human_name))]}
+  1:1 \human ortholog genes expressed ($\mathrm{FPKM} \ge 10$) in the
+  placenta of all \Sexpr{star.logs[,length(unique(species))]} species
+  studied which are housekeeping genes~%
+  \cite{Eisenberg.ea2013:Humanhousekeepinggenesrevisited}
+  ordered (from top to bottom) by median expression.}
+\label{fig:core_placenta_transcriptome_housekeeping}
+\end{figure}
+
+\clearpage
+
+
 \begin{figure}
 <<housekeeping.placenta.distribution,fig.width=8,fig.height=8,out.height="0.8\\textheight",echo=FALSE,message=FALSE>>=
 ## housekeeping set as apposed to non-housekeeping set
