add gsea acronym

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -21,6 +21,7 @@
 \DeclareAcronym{PAG}{long=Pregnancy-Associated Glycoprotein}
 \DeclareAcronym{GO}{long=Gene Ontology}
 \DeclareAcronym{FDR}{long=False Discovery Rate}
+\DeclareAcronym{gsea}{short=GSEA,long=gene set enrichment analysis}
 
 %%% Local Variables:
 %%% mode: latex
